--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
     <title>Sistema de Gestão</title>
     <link rel="stylesheet" href="../static/style.css">
     <link rel="icon" type="image/ico" href="../static/favicon.ico">
+    <link rel="preload" as="image" href="{{ url_for('static', filename='bg.webp') }}">
 </head>
 <body>
 
@@ -136,3 +137,4 @@ function selecionarArea(area, botao){
 </script>
 </body>
 </html>
+
