--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
 body{
     height:100vh;
     font-family:Arial, sans-serif;
-    background-image: url("fundo.png");
+    background:#5AAAFD url("../static/bg.webp") center/cover no-repeat;
     background-size: 100%;
     display:flex;
     justify-content:center;
